Fix some issues with scaling on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,6 +109,12 @@ header nav li {
     max-height: 100%;
 }
 
+@media (max-width: 400px) {
+    header nav li {
+        margin: 0 0.5rem;
+    }
+}
+
 /* Hero Styles */
 
 #hero {
@@ -241,6 +247,10 @@ header nav li {
         justify-content: center;
     }
 
+    .about-text {
+        margin: 2rem 2rem;
+    }
+
     #about img {
         height: 50%;
         width: 50%;
@@ -248,6 +258,10 @@ header nav li {
 } 
 
 @media (max-width: 700px) {
+
+    #skills h3 {
+        font-size: 1.2rem;
+    }
     
     #skills li {
         font-size: 1rem;
@@ -364,7 +378,11 @@ header nav li {
     }
 
     .project-display {
-        width: 80vw;
+        width: 100vw;
+    }
+
+    .project-container p {
+        padding: 0 2rem;
     }
 
     .project-container h3 {
@@ -372,11 +390,17 @@ header nav li {
     }
 
     .github {
-        margin-top: 2rem;
+        margin-top: 1.5rem;
         font-size: 2rem;
     }
 
 } 
+
+@media (max-width: 400px) {
+    .github {
+        font-size: 1.5rem;
+    }
+}
 
 /* Contact Styles */
 
@@ -408,6 +432,7 @@ header nav li {
     flex: 1 0 auto;
     align-self: auto;
     text-align: center;
+    margin: 0.2rem;
 }
 
 #contact a {
